[gd_scene load_steps=2 format=3 uid="uid://hnj5a3kfiu1v"]

[ext_resource type="Script" uid="uid://dguubyrqu3dxi" path="res://Scenes/MainMenu/main_menu.gd" id="1_uqdog"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_uqdog")

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "A Cheesy Prototype"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -200.0
offset_right = -48.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
text = "Play"

[node name="CreditsButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -528.0
offset_top = -200.0
offset_right = -128.0
offset_bottom = -100.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
text = "Credits
"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
